# sklearn-transformer-extensions

./: .gitignore  LICENSE  README.md  pyproject.toml  test_pipeline.py
sklearn_transformer_extensions/: __init__.py  base.py  pipeline.py  transformers.py  xyadapter.py  xydata.py
sklearn_transformer_extensions/compose/: __init__.py  _column_transformer.py
sklearn_transformer_extensions/compose/tests/: test_column_transformer.py
sklearn_transformer_extensions/metrics/: __init__.py  _scorer.py
sklearn_transformer_extensions/preprocessing/: __init__.py  _function_transformer.py
sklearn_transformer_extensions/preprocessing/tests/: test_function_transformer.py
sklearn_transformer_extensions/tests/: test_base.py  test_pipeline.py
tests/: test_sklearn_transformer_extensions.py
