[tool.poetry]
name = "sklearn-transformer-extensions"
version = "0.1.9"
description = """\
Some scikit-learn transformer extensions to make using pandas dataframes in \
scikit-learn pipelines easier."""
authors = ["Random Geek <randomgeek78@gmail.com>"]
homepage = "https://github.com/randomgeek78/sklearn-transformer-extensions"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.1.1"
ipdb = "^0.13.9"
numpy = "^1.22.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["./sklearn_transformer_extensions"]
venv = ".venv"
venvPath = "."

reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false

pythonVersion = "3.8"
pythonPlatform = "Linux"

executionEnvironments = [{ root = "." }]

[tool.yapf]
split_before_named_assigns=false
allow_split_before_dict_value=false
column_limit=80

[tool.pytest.ini_options]
addopts="--pdbcls=IPython.terminal.debugger:TerminalPdb"
